@@ -1,3 +1,7 @@
+2010-03-21  smeghead <smeghead@users.sourceforge.jp>
+
+	* sqlite3をstaticリンクするようなmakeのtargetを追加した。
+
 2010-03-20  smeghead <smeghead@users.sourceforge.jp>
 
 	* INSTALLに基本ソフトウェアをインストールする項を追加した。
